--- a/changelog.txt
+++ b/changelog.txt
@@ -5,7 +5,7 @@
 - 건물 추가
   - 저층 상가 (2020) 4개
   - 고층 오피스 빌딩 (2010)
-- 한국종합건물세트 스프라이트 개선 건물 추가
+- 한국종합건물세트 일부 건물 스프라이트 개선 후 추가
   - 고층 상가 (2000) 2개
   - 저층 오피스 빌딩 (2000)
 -
