--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,13 @@
+한국 초기 열차 세트 alpha0.2.0 (2023.06.04)
+-----------------------------------------
+- 건물 추가
+  - 고층 아파트 (2005)
+- 한국종합건물세트 일부 건물 스프라이트 개선 후 추가
+  - 저층 상가 (1980)
+- 매개변수 추가
+  - 건물 최소수명 설정
+-
+-
 한국 초기 열차 세트 alpha0.1.0 (2023.06.03)
 -----------------------------------------
 - 첫 버전
@@ -7,6 +17,6 @@
   - 고층 오피스 빌딩 (2010)
 - 한국종합건물세트 일부 건물 스프라이트 개선 후 추가
   - 고층 상가 (2000) 2개
-  - 저층 오피스 빌딩 (2000)
+  - 저층 오피스 빌딩 (1980)
 -
 -
