--- a/changelog.txt
+++ b/changelog.txt
@@ -1,12 +1,17 @@
-한국 초기 열차 세트 alpha0.2.0 (2023.06.04)
+한국 초기 열차 세트 alpha0.2.0 (2023.06.05)
 -----------------------------------------
 - 건물 추가
+  - 단독주택 (1990, 모델: 수졸당)
+  - 빌라 (2000)
   - 고층 아파트 (2005)
+  - 고층 오피스 빌딩 (1970, 모델: 삼일빌딩)
 - 한국종합건물세트 일부 건물 스프라이트 개선 후 추가
   - 저층 상가 (1980)
+- 스프라이트 수정
+  - 일부 건물의 공사중 스프라이트 개선
+  - 일부 건물의 유리외벽 디테일 개선
 - 매개변수 추가
   - 건물 최소수명 설정
--
 -
 한국 초기 열차 세트 alpha0.1.0 (2023.06.03)
 -----------------------------------------
