--- a/lang/korean.lng
+++ b/lang/korean.lng
@@ -2,17 +2,19 @@
 
 # GRF name and description
 STR_GRF_NAME                                      :한국 도시 세트 alpha0.2.0
-STR_GRF_DESC                                      :이 NewGRF는 북한을 제외한 한국 스타일의 건물을 추가해줍니다.
+STR_GRF_DESC                                      :이 NewGRF는 북한을 제외한 한국 스타일의 건물을 추가해줍니다. {}{}{YELLOW}2020년 이후부터 플레이를 권장합니다. 과거의 건물들은 추가 예정입니다!
 
 STR_GRF_URL                                       :https://github.com/SerpensNebula/Korean-Early-Train-Set
 
 # Parameters
-STR_PARAM_OVERRIDE_NAME                           :기본 건물 생성하지 않기
-STR_PARAM_OVERRIDE_DESC                           :오픈트타 기본 건물이 더이상 나타나지 않게 해줍니다.
+STR_PARAM_OVERRIDE_NAME                           :기본 건물을 생성하지 않게 함
+STR_PARAM_OVERRIDE_DESC                           :이 매개변수를 키면 오픈트타 기본 건물이 더이상 나타나지 않게 해줍니다.
 STR_PARAM_LIFETIME_NAME                           :건물 최소수명 설정
-STR_PARAM_LIFETIME_DESC                           :모든 건물의 최소수명을 설정합니다. 최소수명을 줄이면 건물들의 재건축 빈도가 짧아지고 도시의 모습도 빠르게 바뀝니다. 0 으로 하면 건물이 준공되자마자 철거될 수 있습니다.
+STR_PARAM_LIFETIME_DESC                           :모든 건물의 최소수명을 설정합니다. 최소수명을 줄이면 건물들의 재건축 빈도가 짧아지고 도시의 모습도 빠르게 바뀝니다. 0 으로 하면 건물이 준공되자마자 철거될 수 있습니다. {}{}JGR패치팩의 '1일의 길이 조절' 기능을 쓸때 같이 조정하는 것이 좋습니다.
 
 # Building names
+STR_SINGLE_HOUSE_NAME                             :단독주택
+STR_VILLA_NAME                                    :빌라
 STR_APT_HIGH_NAME                                 :고층 아파트
 STR_SHOPPING_DIST_NAME                            :저층 상가
 STR_LOW_FLOOR_BUILDING_NAME                       :고층 상가
