--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,19 @@
+한국 초기 열차 세트 alpha0.3.0 (2023.06.08)
+-----------------------------------------
+- 건물 추가
+  - 빌라 B (2000)
+  - 저층 아파트 (2000, 모델: 광장11차 현대홈타운)
+  - 아파트 놀이터 (2000, 같은 년도 아파트 바로 옆에서 등장함)
+- 스프라이트 수정
+  - 저층 상가 (2010) 4개의 공사중 스프라이트 추가
+  - 고층 아파트 (2005) 건물 앞뒤폭을 4px씩 늘림
+- 코드 수정
+  - 저층 상가 (2010) 4개를 한 아이템으로 통합 (!업데이트시 기존 상가 일부가 망가질 것임!)
+  - 고층 아파트 (2005) 의 등장년도를 2000년으로 변경
+  - 고층 아파트 (2005) 의 일부 크기를 1x2에서 1x1로 변경 (!업데이트시 기존 아파트 일부가 망가질 것임!)
+  - 모든 건물들 인구수의 1/5 정도를 줄임
+-
+-
 한국 초기 열차 세트 alpha0.2.0 (2023.06.05)
 -----------------------------------------
 - 건물 추가
@@ -12,6 +28,8 @@
   - 일부 건물의 유리외벽 디테일 개선
 - 매개변수 추가
   - 건물 최소수명 설정
+- 코드 수정
+  - 저층 상가 (2020) 의 등장년도를 2010년으로 수정
 -
 한국 초기 열차 세트 alpha0.1.0 (2023.06.03)
 -----------------------------------------
@@ -19,7 +37,7 @@
 - 한국종합건물세트에서 코드 일부 이관
 - 건물 추가
   - 저층 상가 (2020) 4개
-  - 고층 오피스 빌딩 (2010)
+  - 고층 오피스 빌딩 (2010, 모델: 삼성전자 서초사옥)
 - 한국종합건물세트 일부 건물 스프라이트 개선 후 추가
   - 고층 상가 (2000) 2개
   - 저층 오피스 빌딩 (1980)
