--- a/changelog.txt
+++ b/changelog.txt
@@ -1,9 +1,20 @@
+한국 초기 열차 세트 alpha0.4.0 (2023.06.09)
+-----------------------------------------
+- 건물 추가  
+  - 고층 아파트 (2010) 추가
+- 코드 수정
+  - 일부 건물들의 item ID 변경 (!업데이트시 기존 건물 일부가 망가질 것임!)
+- 스프라이트 수정
+  - 고층 아파트 (1990) 입구 추가, 길 없애고 화단 추가
+-
+-
 한국 초기 열차 세트 alpha0.3.0 (2023.06.08)
 -----------------------------------------
 - 건물 추가
   - 빌라 B (2000)
   - 저층 아파트 (2000, 모델: 광장11차 현대홈타운)
-  - 아파트 놀이터 (2000, 같은 년도 아파트 바로 옆에서 등장함)
+  - 고층 아파트 (1990)
+  - 아파트 놀이터 (2000, 같은 년도 고층 아파트 바로 옆에서 등장함)
 - 스프라이트 수정
   - 저층 상가 (2010) 4개의 공사중 스프라이트 추가
   - 고층 아파트 (2005) 건물 앞뒤폭을 4px씩 늘림
