--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,4 @@
-한국 초기 열차 세트 alpha0.4.0 (2023.06.09)
+한국 도시 세트 alpha0.4.0 (2023.06.09)
 -----------------------------------------
 - 건물 추가  
   - 고층 아파트 (2010) 추가
@@ -8,7 +8,7 @@
   - 고층 아파트 (1990) 입구 추가, 길 없애고 화단 추가
 -
 -
-한국 초기 열차 세트 alpha0.3.0 (2023.06.08)
+한국 도시 세트 alpha0.3.0 (2023.06.08)
 -----------------------------------------
 - 건물 추가
   - 빌라 B (2000)
@@ -25,7 +25,7 @@
   - 모든 건물들 인구수의 1/5 정도를 줄임
 -
 -
-한국 초기 열차 세트 alpha0.2.0 (2023.06.05)
+한국 도시 세트 alpha0.2.0 (2023.06.05)
 -----------------------------------------
 - 건물 추가
   - 단독주택 (1990, 모델: 수졸당)
@@ -42,7 +42,7 @@
 - 코드 수정
   - 저층 상가 (2020) 의 등장년도를 2010년으로 수정
 -
-한국 초기 열차 세트 alpha0.1.0 (2023.06.03)
+한국 도시 세트 alpha0.1.0 (2023.06.03)
 -----------------------------------------
 - 첫 버전
 - 한국종합건물세트에서 코드 일부 이관
