--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,13 @@
+한국 도시 세트 alpha0.5.0 (2023.06.15)
+-----------------------------------------
+- 건물 추가  
+  - 저층 아파트 (1990), 물탱크 추가
+- 코드 수정
+  - 빌라 A와 B (2000)를 통합 (!업데이트시 기존 건물 일부가 망가질 것임!)
+- 스프라이트 수정
+  - 빌라 A의 건물 종류를, 통합한 B 포함 8가지(4가지, 각 약간 다른 모양 1개씩 총 8개)로 늘림
+-
+-
 한국 도시 세트 alpha0.4.0 (2023.06.09)
 -----------------------------------------
 - 건물 추가  
