--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,25 @@
+한국 도시 세트 beta0.1.0 (2023.06.21)
+-----------------------------------------
+- 건물 추가 (한국종합건물세트 스프라이트 개선 후 추가)
+  - 저층 오피스 빌딩 (1980, 모델: 대한항공 서소문 사옥)
+  - 고층 상가 (2000) 추가
+- 코드 수정
+  - 고층 아파트 B (1990) 의 등장년도를 1980년으로 바꿈
+  - 모든 multi_tile 건물의 등장확률을 두배로 높임
+  - 최소 수명 매개변수의 최대값을 5000000 에서 20 으로 낮춤
+- 스프라이트 수정
+  - 모든 건물의 기중기 그래픽 개선
+  - 모든 건물의 공사중 스프라이트 추가
+  - 고층 상가 (2000) 에 더 많은 간판 추가
+- 언어 설정
+  - 영어(UK) 추가
+-
+-
 한국 도시 세트 alpha0.5.0 (2023.06.15)
 -----------------------------------------
-- 건물 추가  
-  - 저층 아파트 (1990), 물탱크 추가
+- 건물 추가
+  - 고층 아파트 B (1990, 모델: 마포 성산 시영아파트)
+  - 저층 아파트, 아파트 물탱크 (1990) 추가
 - 코드 수정
   - 빌라 A와 B (2000)를 통합 (!업데이트시 기존 건물 일부가 망가질 것임!)
 - 스프라이트 수정
