--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+한국 도시 세트 beta0.1.1 (2023.06.21)
+-----------------------------------------
+- 잘못된 프로젝트 사이트 링크 수정
+-
+-
 한국 도시 세트 beta0.1.0 (2023.06.21)
 -----------------------------------------
 - 건물 추가 (한국종합건물세트 스프라이트 개선 후 추가)
