--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+한국 도시 세트 beta0.1.2 (2023.06.21)
+-----------------------------------------
+- 초고층 건물들을 '대도시' 에서만 나올 수 있게 수정
+-
+-
+
 한국 도시 세트 beta0.1.1 (2023.06.21)
 -----------------------------------------
 - 잘못된 프로젝트 사이트 링크 수정
