--- a/changelog.txt
+++ b/changelog.txt
@@ -1,9 +1,29 @@
+한국 도시 세트 beta0.2.0 (2023.06.26)
+-----------------------------------------
+- 건물 추가
+  - 빌라 (1980) 3개
+  - 저층 오피스 C (2000, 한국종합건물세트에서 가져와서 개선)
+  - 저층 오피스 D (2000, 모델: 강남 어반하이브)
+  - 고층 상가 (1x1, 1990) 2개
+  - 고층 오피스 (1990, 모델: SK서린빌딩)
+- 스프라이트 개선
+  - 모든 건물에 눈지형 추가
+- 코드 수정
+  - 대부분 건물의 아이템ID를 재조정 (!업데이트시 기존 건물 대부분이 망가질 것임!)
+  - 고층 상가 (1990) 의 크기를 1X1로 줄임 (!업데이트시 기존 건물 일부가 망가질 것임!)
+  - 고층 오피스 (2000) 를 한 ID로 통합 (!업데이트시 기존 건물 일부가 망가질 것임!)
+  - 아파트 놀이터를 아파트와 한 ID로 통합 (!업데이트시 기존 건물 일부가 망가질 것임!)
+  - 고층 상가 (2000) 의 등장년도를 1990년으로 변경
+  - 일부 건물 최소연령 두배로 늘림
+  - 일부 건물 필요 인구수 하향
+-
+-
 한국 도시 세트 beta0.1.2 (2023.06.21)
 -----------------------------------------
-- 초고층 건물들을 '대도시' 에서만 나올 수 있게 수정
+- 일부 고층 건물들을 '대도시' 에서만 나올 수 있게 수정
+- 아파트 놀이터 (2000) 에 인구 요구수준 추가
 -
 -
-
 한국 도시 세트 beta0.1.1 (2023.06.21)
 -----------------------------------------
 - 잘못된 프로젝트 사이트 링크 수정
