업데이트 0.3.0 (개발중)

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,14 +1,28 @@
+한국 도시 세트 beta0.3.0 (2023.07.11) - WIP
+-----------------------------------------
+* 건물 추가
+  - 초가집 (0 ~ 1950)
+  - 기와집 (0 ~ 1950)
+  - 공원 (2000)
+* 스프라이트 개선
+  - 고층 아파트 (2000) 다른 방향 1종류 추가
+* 코드 수정
+  - 모든 아파트의 등장확률을 2배(15, 최대)로 올림
+  - 거의 모든 건물의 등장 도시영역을 도심쪽으로 변경
+
+
+
 한국 도시 세트 beta0.2.0 (2023.06.26)
 -----------------------------------------
-- 건물 추가
+* 건물 추가
   - 빌라 (1980) 3개
   - 저층 오피스 C (2000, 한국종합건물세트에서 가져와서 개선)
   - 저층 오피스 D (2000, 모델: 강남 어반하이브)
   - 고층 상가 (1x1, 1990) 2개
   - 고층 오피스 (1990, 모델: SK서린빌딩)
-- 스프라이트 개선
+* 스프라이트 개선
   - 모든 건물에 눈지형 추가
-- 코드 수정
+* 코드 수정
   - 대부분 건물의 아이템ID를 재조정 (!업데이트시 기존 건물 대부분이 망가질 것임!)
   - 고층 상가 (1990) 의 크기를 1X1로 줄임 (!업데이트시 기존 건물 일부가 망가질 것임!)
   - 고층 오피스 (2000) 를 한 ID로 통합 (!업데이트시 기존 건물 일부가 망가질 것임!)
@@ -16,100 +30,107 @@
   - 고층 상가 (2000) 의 등장년도를 1990년으로 변경
   - 일부 건물 최소연령 두배로 늘림
   - 일부 건물 필요 인구수 하향
--
--
+
+
+
 한국 도시 세트 beta0.1.2 (2023.06.21)
 -----------------------------------------
-- 일부 고층 건물들을 '대도시' 에서만 나올 수 있게 수정
-- 아파트 놀이터 (2000) 에 인구 요구수준 추가
--
--
+* 일부 고층 건물들을 '대도시' 에서만 나올 수 있게 수정
+* 아파트 놀이터 (2000) 에 인구 요구수준 추가
+
+
+
 한국 도시 세트 beta0.1.1 (2023.06.21)
 -----------------------------------------
-- 잘못된 프로젝트 사이트 링크 수정
--
--
+* 잘못된 프로젝트 사이트 링크 수정
+
+
+
 한국 도시 세트 beta0.1.0 (2023.06.21)
 -----------------------------------------
-- 건물 추가 (한국종합건물세트 스프라이트 개선 후 추가)
+* 건물 추가 (한국종합건물세트 스프라이트 개선 후 추가)
   - 저층 오피스 빌딩 (1980, 모델: 대한항공 서소문 사옥)
   - 고층 상가 (2000) 추가
-- 코드 수정
+* 코드 수정
   - 고층 아파트 B (1990) 의 등장년도를 1980년으로 바꿈
   - 모든 multi_tile 건물의 등장확률을 두배로 높임
   - 최소 수명 매개변수의 최대값을 5000000 에서 20 으로 낮춤
-- 스프라이트 수정
+* 스프라이트 수정
   - 모든 건물의 기중기 그래픽 개선
   - 모든 건물의 공사중 스프라이트 추가
   - 고층 상가 (2000) 에 더 많은 간판 추가
-- 언어 설정
+* 언어 설정
   - 영어(UK) 추가
--
--
+
+
+
 한국 도시 세트 alpha0.5.0 (2023.06.15)
 -----------------------------------------
-- 건물 추가
+* 건물 추가
   - 고층 아파트 B (1990, 모델: 마포 성산 시영아파트)
   - 저층 아파트, 아파트 물탱크 (1990) 추가
-- 코드 수정
+* 코드 수정
   - 빌라 A와 B (2000)를 통합 (!업데이트시 기존 건물 일부가 망가질 것임!)
-- 스프라이트 수정
+* 스프라이트 수정
   - 빌라 A의 건물 종류를, 통합한 B 포함 8가지(4가지, 각 약간 다른 모양 1개씩 총 8개)로 늘림
--
--
+
+
+
 한국 도시 세트 alpha0.4.0 (2023.06.09)
 -----------------------------------------
-- 건물 추가  
+* 건물 추가  
   - 고층 아파트 (2010) 추가
-- 코드 수정
+* 코드 수정
   - 일부 건물들의 item ID 변경 (!업데이트시 기존 건물 일부가 망가질 것임!)
-- 스프라이트 수정
+* 스프라이트 수정
   - 고층 아파트 (1990) 입구 추가, 길 없애고 화단 추가
--
--
+
+
+
 한국 도시 세트 alpha0.3.0 (2023.06.08)
 -----------------------------------------
-- 건물 추가
+* 건물 추가
   - 빌라 B (2000)
   - 저층 아파트 (2000, 모델: 광장11차 현대홈타운)
   - 고층 아파트 (1990)
   - 아파트 놀이터 (2000, 같은 년도 고층 아파트 바로 옆에서 등장함)
-- 스프라이트 수정
+* 스프라이트 수정
   - 저층 상가 (2010) 4개의 공사중 스프라이트 추가
   - 고층 아파트 (2005) 건물 앞뒤폭을 4px씩 늘림
-- 코드 수정
+* 코드 수정
   - 저층 상가 (2010) 4개를 한 아이템으로 통합 (!업데이트시 기존 상가 일부가 망가질 것임!)
   - 고층 아파트 (2005) 의 등장년도를 2000년으로 변경
   - 고층 아파트 (2005) 의 일부 크기를 1x2에서 1x1로 변경 (!업데이트시 기존 아파트 일부가 망가질 것임!)
   - 모든 건물들 인구수의 1/5 정도를 줄임
--
--
+
+
+
 한국 도시 세트 alpha0.2.0 (2023.06.05)
 -----------------------------------------
-- 건물 추가
+* 건물 추가
   - 단독주택 (1990, 모델: 수졸당)
   - 빌라 (2000)
   - 고층 아파트 (2005)
   - 고층 오피스 빌딩 (1970, 모델: 삼일빌딩)
-- 한국종합건물세트 일부 건물 스프라이트 개선 후 추가
+* 한국종합건물세트 일부 건물 스프라이트 개선 후 추가
   - 저층 상가 (1980)
-- 스프라이트 수정
+* 스프라이트 수정
   - 일부 건물의 공사중 스프라이트 개선
   - 일부 건물의 유리외벽 디테일 개선
-- 매개변수 추가
+* 매개변수 추가
   - 건물 최소수명 설정
-- 코드 수정
+* 코드 수정
   - 저층 상가 (2020) 의 등장년도를 2010년으로 수정
--
+
+
+
 한국 도시 세트 alpha0.1.0 (2023.06.03)
 -----------------------------------------
-- 첫 버전
-- 한국종합건물세트에서 코드 일부 이관
-- 건물 추가
+* 첫 버전
+* 한국종합건물세트에서 코드 일부 이관
+* 건물 추가
   - 저층 상가 (2020) 4개
   - 고층 오피스 빌딩 (2010, 모델: 삼성전자 서초사옥)
-- 한국종합건물세트 일부 건물 스프라이트 개선 후 추가
+* 한국종합건물세트 일부 건물 스프라이트 개선 후 추가
   - 고층 상가 (2000) 2개
   - 저층 오피스 빌딩 (1980)
--
--
