--- a/changelog.txt
+++ b/changelog.txt
@@ -1,14 +1,20 @@
-한국 도시 세트 beta0.3.0 (2023.07.11) - WIP
+한국 도시 세트 beta0.3.0 (2023.07.21) - WIP
 -----------------------------------------
 * 건물 추가
   - 초가집 (0 ~ 1950)
   - 기와집 (0 ~ 1950)
   - 공원 (2000)
-* 스프라이트 개선
+  - 저층 상가 (1990) 4채
+  - 고층 오피스 (2000, 모델: 부산 구 한진해운 빌딩)
+  - 초고층 마천루 (2010, 모델: 부산국제금융센터)
   - 고층 아파트 (2000) 다른 방향 1종류 추가
+* 스프라이트 수정
+  - 상가의 간판 제거
 * 코드 수정
   - 모든 아파트의 등장확률을 2배(15, 최대)로 올림
+  - 아파트를 제외한 모든 건물의 등장확률을 절반으로 내림
   - 거의 모든 건물의 등장 도시영역을 도심쪽으로 변경
+  - 오피스 건물을 '대도시' 에서만 나오도록 변경
 
 
 
@@ -23,10 +29,10 @@
 * 스프라이트 개선
   - 모든 건물에 눈지형 추가
 * 코드 수정
-  - 대부분 건물의 아이템ID를 재조정 (!업데이트시 기존 건물 대부분이 망가질 것임!)
-  - 고층 상가 (1990) 의 크기를 1X1로 줄임 (!업데이트시 기존 건물 일부가 망가질 것임!)
-  - 고층 오피스 (2000) 를 한 ID로 통합 (!업데이트시 기존 건물 일부가 망가질 것임!)
-  - 아파트 놀이터를 아파트와 한 ID로 통합 (!업데이트시 기존 건물 일부가 망가질 것임!)
+  - 대부분 건물의 아이템ID를 재조정
+  - 고층 상가 (1990) 의 크기를 1X1로 줄임
+  - 고층 오피스 (2000) 를 한 ID로 통합
+  - 아파트 놀이터를 아파트와 한 ID로 통합
   - 고층 상가 (2000) 의 등장년도를 1990년으로 변경
   - 일부 건물 최소연령 두배로 늘림
   - 일부 건물 필요 인구수 하향
@@ -70,7 +76,7 @@
   - 고층 아파트 B (1990, 모델: 마포 성산 시영아파트)
   - 저층 아파트, 아파트 물탱크 (1990) 추가
 * 코드 수정
-  - 빌라 A와 B (2000)를 통합 (!업데이트시 기존 건물 일부가 망가질 것임!)
+  - 빌라 A와 B (2000)를 통합
 * 스프라이트 수정
   - 빌라 A의 건물 종류를, 통합한 B 포함 8가지(4가지, 각 약간 다른 모양 1개씩 총 8개)로 늘림
 
