--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,4 @@
-한국 도시 세트 beta0.3.0 (2023.07.21) - WIP
+한국 도시 세트 beta0.3.0 (2023.07.24) - WIP
 -----------------------------------------
 * 건물 추가
   - 초가집 (0 ~ 1950)
@@ -8,7 +8,10 @@
   - 고층 오피스 (2000, 모델: 부산 구 한진해운 빌딩)
   - 초고층 마천루 (2010, 모델: 부산국제금융센터)
   - 고층 아파트 (2000) 다른 방향 1종류 추가
-* 스프라이트 수정
+* 특별한 건물 추가
+  - 회사 본사 5단계 건물 (모델: 대전 한국철도공사 본사)
+* 스프라이트 개선
+  - 초고층 마천루 (삼성전자 사옥) 창문에 커튼 장식 추가
   - 상가의 간판 제거
 * 코드 수정
   - 모든 아파트의 등장확률을 2배(15, 최대)로 올림
