--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,4 @@
-한국 도시 세트 beta0.3.0 (2023.07.24) - WIP
+한국 도시 세트 beta0.3.0 (2023.07.24)
 -----------------------------------------
 * 건물 추가
   - 초가집 (0 ~ 1950)
@@ -12,12 +12,13 @@
   - 회사 본사 5단계 건물 (모델: 대전 한국철도공사 본사)
 * 스프라이트 개선
   - 초고층 마천루 (삼성전자 사옥) 창문에 커튼 장식 추가
-  - 상가의 간판 제거
+  - 상가의 번잡한 간판 제거
 * 코드 수정
   - 모든 아파트의 등장확률을 2배(15, 최대)로 올림
   - 아파트를 제외한 모든 건물의 등장확률을 절반으로 내림
   - 거의 모든 건물의 등장 도시영역을 도심쪽으로 변경
   - 오피스 건물을 '대도시' 에서만 나오도록 변경
+  - 모든 아파트, 마천루/고층 오피스 건물의 인구수를 1/3 정도 높임
 
 
 
