--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,21 @@
+한국 도시 세트 beta0.4.0 (2023.11.08)
+-----------------------------------------
+* 건물 추가
+  - 저층 아파트 (1970, 모델: 반포 주공아파트 1단지)
+  - 상가 (2000) 4채
+  - 초고층 주상복합 아파트 (2020, 모델: 기흥 힐스테이트 자이)
+  - 시청 (2010, 모델: 성남시청)
+* 그래픽 수정
+  - 저층 아파트 (1990) 눈 쌓인 모습 좀 더 디테일하게 보강, 물탱크 잔디밭에 나무 추가
+* 오류 수정
+  - 저층 상가 (1990) 일부에서 건물 투명 설정시 그래픽 오류가 나던 것 고침
+  - 고층 아파트 (2000) 일부 그림자가 없던 부분 고침
+* 코드 수정
+  - 모든 아파트 단지가 서로 이전보다 좀 더 멀리 떨어져 지어지게 함
+  - 건물 최소수명 매개변수 기본값을 5에서 10(대부분 40년)으로 변경
+
+
+
 한국 도시 세트 beta0.3.0 (2023.07.24)
 -----------------------------------------
 * 건물 추가
@@ -58,7 +76,7 @@
 
 한국 도시 세트 beta0.1.0 (2023.06.21)
 -----------------------------------------
-* 건물 추가 (한국종합건물세트 스프라이트 개선 후 추가)
+* 건물 추가 (한국종합건물세트에서 가져와서 개선)
   - 저층 오피스 빌딩 (1980, 모델: 대한항공 서소문 사옥)
   - 고층 상가 (2000) 추가
 * 코드 수정
