--- a/lang/english.lng
+++ b/lang/english.lng
@@ -1,8 +1,8 @@
 ##grflangid 0x01
 
 # GRF name and description
-STR_GRF_NAME                                      	:Korean Town Set beta0.3.0
-STR_GRF_DESC                                      	:Korean Town Set includes Korean style buildings except North Korea. {}{}{YELLOW}Highly recommanded to use this NewGRF after year 2000. Older buildings will be added soon! {}{}{BLACK}License: {SILVER}GNU GPL v3
+STR_GRF_NAME                                      	:Korean Town Set beta0.4.0
+STR_GRF_DESC                                      	:Korean Town Set includes Korean style buildings except North Korea. {}{}{YELLOW}Highly recommanded to use this NewGRF after year 2000. More buildings will be added soon! {}{}{BLACK}Special thanks: {SILVER}Jakga, Kiwitree, Telk {}{}{BLACK}License: {SILVER}GNU GPL v3
 
 STR_GRF_URL                                       	:https://github.com/SerpensNebula/Korean-Town-Set
 
@@ -10,9 +10,16 @@ STR_GRF_URL                                       	:https://github.com/SerpensNe
 STR_PARAM_OVERRIDE_NAME                           	:Override original buildings
 STR_PARAM_OVERRIDE_DESC                           	:If you enable this setting, default OpenTTD buildings never appears on the map.
 STR_PARAM_LIFETIME_NAME                           	:Set minimal lifetime
-STR_PARAM_LIFETIME_DESC                           	:Set minimal lifetime of all buildings. The shorter this setting, the more frequent the building will be rebuilt. It is recommanded to use with 'Day length factor' setting from JGR's patchpack. {}{}Default is 5(x5, most are 20 years).
+STR_PARAM_LIFETIME_DESC                           	:Set minimal lifetime of all buildings. The shorter this setting, the more frequent the building will be rebuilt. It is recommanded to use with 'Day length factor' setting from JGR's patchpack. {}{}Default is 10(x5, most are 40 years).
 
 # Building names
+STR_CITY_HALL_NAME									:City hall
+STR_SCHOOL_NAME										:School
+STR_POLICE_STATION									:Police station
+STR_FIRE_STATION									:Fire station
+STR_POST_OFFICE										:Post office
+STR_HOSPITAL										:Hospital
+
 STR_TILED_ROOF_HOUSE                              	:Tiled-roof Hanok
 STR_THATCHED_ROOF_HOUSE							  	:Thatched-roof Hanok
 STR_SINGLE_HOUSE_NAME                             	:House
