--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,17 @@
+한국 도시 세트 beta0.7.0 (2024.11.02)
+-----------------------------------------
+* 오브젝트 추가
+  - 31빌딩 (1970)
+  - N서울타워 (1975)
+* 코드 수정
+  - 이제 도시건물이 식품(FOOD)도 받음
+* 오류 수정
+  - 마천루 (1970) 일부 건물 눈지형 적용 안되던 것 고침
+  - 마천루 (2010) 일부 건물 눈지형 적용 안되던 것 고침
+  - 상가 (2010) 일부 건물 바닥 실루엣과 건물이 알맞지 않던 것 고침
+
+
+
 한국 도시 세트 beta0.6.0 (2024.01.09)
 -----------------------------------------
 * 건물 추가
