--- a/lang/english.lng
+++ b/lang/english.lng
@@ -1,7 +1,7 @@
 ##grflangid 0x01
 
 # GRF name and description
-STR_GRF_NAME                                      	:Korean Town Set beta0.6.0
+STR_GRF_NAME                                      	:Korean Town Set beta0.7.0
 STR_GRF_DESC                                      	:Korean Town Set includes Korean style buildings except North Korea. {}{}{YELLOW}Highly recommanded to use this NewGRF after year 2000. More buildings will be added soon! {}{}{BLACK}Special thanks: {SILVER}Jakga, Kiwitree, Telk {}{}{BLACK}License: {SILVER}GNU GPL v3
 
 STR_GRF_URL                                       	:https://github.com/SerpensNebula/Korean-Town-Set
@@ -38,5 +38,9 @@ STR_PARK_NAME                                     	:Park
 
 # Object names
 STR_OBJECT_KTS_NAME									:Korean Town Set Objects
+STR_OBJECT_31BUILDING_NAME							:31 Building
+STR_OBJECT_31BUILDING_DESC							:Year Of Completion: 1970
+STR_OBJECT_N_SEOUL_TOWER_NAME						:N Seoul Tower
+STR_OBJECT_N_SEOUL_TOWER_DESC						:Year Of Completion: 1975
 STR_OBJECT_63BUILDING_NAME							:63 Building
-STR_OBJECT_63building_DESC							:Year completed: 1985
+STR_OBJECT_63BUILDING_DESC							:Year Of Completion: 1985
