--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,12 @@
+한국 도시 세트 beta0.7.1 (2025.05.04)
+* 오브젝트 추가
+  - 한국철도공사 서울본부 (1975, 한국 HQ와 같은 건물, 로고는 제거)
+* 오류 수정
+  - 오브젝트 31빌딩 눈지형 그래픽이 이상하게 나오던 것 고침
+  - 오브젝트 N서울타워와 31빌딩이 일부 눈지형이 아닌 곳에서 눈이 쌓인 모습으로 등장하던 것 고침 
+
+
+
 한국 도시 세트 beta0.7.0 (2024.11.02)
 -----------------------------------------
 * 오브젝트 추가
