--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,10 @@
+한국 도시 세트 beta0.7.2 (2025.05.04)
+-----------------------------------------
+* 오류 수정
+  - NewGRF 버전 올리지 않은 것 고침
+
+
+
 한국 도시 세트 beta0.7.1 (2025.05.04)
 -----------------------------------------
 * 오브젝트 추가
