--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,10 @@
+한국 도시 세트 beta0.7.3 (2025.05.04)
+-----------------------------------------
+* 오류 수정
+  - 잘못된 NewGRF 파일을 올린 것 고침
+
+
+
 한국 도시 세트 beta0.7.2 (2025.05.04)
 -----------------------------------------
 * 오류 수정
