--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,23 @@
+한국 도시 세트 beta0.8.0 (2025.09.07)
+-----------------------------------------
+* 건물 추가
+  - 학교 2개 (1980, 2010)
+  - 경찰서 (2010, 모델: 신축 곡성경찰서)
+  - 소방서 (2010, 모델: 안국역 종로소방서)
+  - 백화점 (2010, 모델: 롯데마트)
+* 그래픽 개선
+  - 고층 오피스 (2000)와 마천루 (2010) 건설중 그래픽에 가림막 추가, 일부 건물 높이 낮춤
+* 코드 수정
+  - 아파트와 공원 등 무리지어 나타나는 건물의 최소수명을 100년(기본값)으로 일괄조정함
+  - 공공건물의 최소수명을 200년(기본값)으로 올림
+  - 공공건물의 최소건설간격을 16칸으로 내림
+  - 일부 건물 등장년도가 표기된 것과 달랐던 것 고침
+  - '한옥' 영어 번역 개선
+* 까먹고 안 쓴 수정사항 뒤늦게나마 공지
+  - 회사 본사 건물을 '한국 HQ' NewGRF로 옮김
+
+
+
 한국 도시 세트 beta0.7.3 (2025.05.04)
 -----------------------------------------
 * 오류 수정
